# replaybook

./: Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  install.sh  shell.nix
.github/workflows/: ci.yml  release.yml
deploy/: README.md  lib.sh
deploy/controller/: Caddyfile.example  bootstrap.sh  nginx.conf.example  replaybook-control.service  trust-worker.sh
deploy/worker/: bootstrap.sh
docs/: CNAME  HOSTING.md  index.html  scenarios.html  style.css  usage.html
scenarios/001-nginx-502/: docker-compose.yml
src/: author.rs  backend.rs  control.rs  hosted.rs  main.rs  recorder.rs  replay.rs  runner.rs  scenario.rs  validate.rs
