[package]
name = "on-call"
version = "20260629.0.2"
edition = "2024"
description = "Fix broken infrastructure to win - a terminal game with real Docker environments"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
