[package]
name = "replaybook"
version = "20260629.0.3"
edition = "2024"
description = "Incident replay trainer - fix broken infrastructure in real Docker environments"
license = "MIT"

[[bin]]
name = "replaybook"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
