[package]
name = "replaybook"
version = "20260716.0.1"
edition = "2024"
description = "Incident replay trainer - fix broken infrastructure in real Docker environments"
license = "MIT"

[[bin]]
name = "replaybook"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/replay.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
